fixed horizontal scrollbar and constrast adjustment

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --grey-color: #f1f2f2;
   --white-text-color: #f7f7f7;
   --black-text-color: #0b0b0b;
-  --grey-text-color: #707070;
+  --grey-text-color: #4f4f4f;
   --nav-color: #e94417;
   --hover-color: #ffcd2a;
   --accent-color: #b6469f;
@@ -31,7 +31,7 @@
   --grey-color: #2c2c2c;
   --white-text-color: #e2e2e2;
   --black-text-color: #e2e2e2;
-  --grey-text-color: #b5b5b5;
+  --grey-text-color: #979797;
 }
 
 /* Link and List styles */
